// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IntermittentFrequency displays Alert about having form when claim is Medical or Caring leave 1`] = `
<Alert
  neutral={true}
  state="info"
>
  <Trans
    components={
      Object {
        "caregiver-certification-form-link": <a
          href="https://www.mass.gov/family-caring-form"
          rel="noopener"
          target="_blank"
        />,
        "healthcare-provider-form-link": <a
          href="https://www.mass.gov/medical-leave-form"
          rel="noopener"
          target="_blank"
        />,
      }
    }
    i18nKey="pages.claimsIntermittentFrequency.needDocumentAlert"
    tOptions={
      Object {
        "context": "medical",
      }
    }
  />
</Alert>
`;

exports[`IntermittentFrequency displays Alert about having form when claim is Medical or Caring leave 2`] = `
<Alert
  neutral={true}
  state="info"
>
  <Trans
    components={
      Object {
        "caregiver-certification-form-link": <a
          href="https://www.mass.gov/family-caring-form"
          rel="noopener"
          target="_blank"
        />,
        "healthcare-provider-form-link": <a
          href="https://www.mass.gov/medical-leave-form"
          rel="noopener"
          target="_blank"
        />,
      }
    }
    i18nKey="pages.claimsIntermittentFrequency.needDocumentAlert"
    tOptions={
      Object {
        "context": "care",
      }
    }
  />
</Alert>
`;

exports[`IntermittentFrequency displays Lead text with form context when claim is for Medical or Caring leave 1`] = `
<Lead>
  Your answers must match Questions 28 and 29 in the Certification of Your Family Member’s Serious Health Condition.
</Lead>
`;

exports[`IntermittentFrequency displays Lead text with form context when claim is for Medical or Caring leave 2`] = `
<Lead>
  Your answers must match the intermittent leave section in the Certification of Your Serious Health Condition.
</Lead>
`;

exports[`IntermittentFrequency displays duration label corresponding to selected duration basis 1`] = `"How many days of work will you miss per absence?"`;

exports[`IntermittentFrequency displays duration label corresponding to selected duration basis 2`] = `"How many hours of work will you miss per absence?"`;

exports[`IntermittentFrequency displays frequency label corresponding to selected frequency interval and basis 1`] = `"Estimate how many absences per week."`;

exports[`IntermittentFrequency displays frequency label corresponding to selected frequency interval and basis 2`] = `"Estimate how many absences per month."`;

exports[`IntermittentFrequency displays frequency label corresponding to selected frequency interval and basis 3`] = `"Estimate how many absences over the next 6 months."`;

exports[`IntermittentFrequency renders the page 1`] = `
<QuestionPage
  onSave={[Function]}
  title="Leave details"
>
  <Alert
    neutral={true}
    state="info"
  >
    <Trans
      components={
        Object {
          "caregiver-certification-form-link": <a
            href="https://www.mass.gov/family-caring-form"
            rel="noopener"
            target="_blank"
          />,
          "healthcare-provider-form-link": <a
            href="https://www.mass.gov/medical-leave-form"
            rel="noopener"
            target="_blank"
          />,
        }
      }
      i18nKey="pages.claimsIntermittentFrequency.needDocumentAlert"
      tOptions={
        Object {
          "context": "medical",
        }
      }
    />
  </Alert>
  <Heading
    level="2"
    size="1"
  >
    Tell us the estimated frequency and duration of your intermittent leave.
  </Heading>
  <Lead>
    Your answers must match the intermittent leave section in the Certification of Your Serious Health Condition.
  </Lead>
  <InputChoiceGroup
    choices={
      Array [
        Object {
          "checked": false,
          "label": "Once or more per week",
          "value": "Weeks",
        },
        Object {
          "checked": false,
          "label": "Once or more per month",
          "value": "Months",
        },
        Object {
          "checked": true,
          "id": "irregularOver6Months",
          "key": "irregularOver6Months",
          "label": "Irregular over the next 6 months",
          "value": "Months",
        },
      ]
    }
    label="How often might you need to be absent from work (frequency interval)?"
    name="leave_details.intermittent_leave_periods[0].frequency_interval_basis"
    onChange={[Function]}
    smallLabel={true}
    type="radio"
    value="Months"
  />
  <ConditionalContent
    visible={true}
  >
    <InputNumber
      label="Estimate how many absences over the next 6 months."
      name="leave_details.intermittent_leave_periods[0].frequency"
      onChange={[Function]}
      smallLabel={true}
      value={6}
      valueType="integer"
      width="small"
    />
    <InputChoiceGroup
      choices={
        Array [
          Object {
            "checked": false,
            "label": "At least one day",
            "value": "Days",
          },
          Object {
            "checked": true,
            "label": "Less than one full work day",
            "value": "Hours",
          },
        ]
      }
      label="How long will an absence typically last?"
      name="leave_details.intermittent_leave_periods[0].duration_basis"
      onChange={[Function]}
      smallLabel={true}
      type="radio"
      value="Hours"
    />
  </ConditionalContent>
  <InputNumber
    label="How many hours of work will you miss per absence?"
    name="leave_details.intermittent_leave_periods[0].duration"
    onChange={[Function]}
    smallLabel={true}
    value={3}
    valueType="integer"
    width="small"
  />
</QuestionPage>
`;
